# TauriInvokeHttp

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  LICENSE.spdx  README.md
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml
Source/: lib.rs
examples/vanilla/: package.json
examples/vanilla/Documentation/: index.html  modules.html
examples/vanilla/Documentation/assets/: highlight.css
examples/vanilla/src-tauri/: Cargo.toml
examples/vanilla/src-tauri/Source/: main.rs
