[package]
name = "tauri-invoke-http"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Tauri Programme within The Commons Conservancy"]
categories = ["gui", "web-programming"]
license-file = "LICENSE"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri-invoke-http"
description = "Make tiny, secure apps for all desktop platforms with Tauri"
exclude = ["/examples", ".license_template", "CHANGELOG.md", "/target"]

[dependencies]
tauri = { version = "1" }
tiny_http = { version = "0.12" }
portpicker = { version = "0.1" }
serde_json = { version = "1.0" }
